nixidy/generated/prod/frigate/Service-frigate.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: frigate
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: frigate
    app.kubernetes.io/service: frigate
  name: frigate
  namespace: home
spec:
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: 5000
    - name: rtsp
      port: 8554
      protocol: TCP
      targetPort: 8554
    - name: webrtc-tcp
      port: 8555
      protocol: TCP
      targetPort: 8555
  selector:
    app.kubernetes.io/controller: frigate
    app.kubernetes.io/instance: frigate
    app.kubernetes.io/name: frigate
  type: ClusterIP
